--- a/myportfolio/portfolio/templates/portfolio/base.html
+++ b/myportfolio/portfolio/templates/portfolio/base.html
@@ -48,7 +48,7 @@
             <nav>
                 <ul class="flex space-x-6 fade-in">
                     <li><a href="{% url 'about' %}" class="text-white hover:text-blue-400">About</a></li>
-                    <li><a href="#projects" class="text-white hover:text-blue-400">Projects</a></li>
+                    <li><a href="{% url 'projects' %}" class="text-white hover:text-blue-400">Projects</a></li>
                     <li><a href="#contact" class="text-white hover:text-blue-400">Contact</a></li>
                 </ul>
             </nav>
